Fix ui bug with drawer component where 20px padding was sticking out of container. Fixed with padding inherit.

--- a/client/components/app.scss
+++ b/client/components/app.scss
@@ -68,8 +68,9 @@ body {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-.slidingMenu{
+.drawer{
 	background:white;
+    padding:inherit;
 }
 .np-title{
 	padding:5px 15px;
